companytype is now addable and updateable in frontend
